<resources>
    <string name="app_name">Coffee2Go</string>
    <string name="textview1">Ilość</string>
    <string name="textview2">1</string>
    <string name="button1">Wyświetl podsumowanie zamówieneia</string>
    <string name="textview3">Podsumowanie zamówienia</string>
    <string name="textview4">0zl</string>
    <string name="button2">+</string>
    <string name="button3">-</string>
    <string name="textview">Dodatki</string>
    <string name="checkbox1">Bita śmietana</string>
    <string name="checkbox2">Czekolada</string>
    <string name="enter_text">Imię</string>
    <string name="entered_text">Imię</string>
    <string name="button4">Zamów</string>
    <string name="hint1">Podsumowanie zamówienia</string>

</resources>
