<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.mmant.a2app.MainActivity">

    <ImageView
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/kawa" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/typedName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/entered_text"
                android:inputType="textCapWords"
                android:textColor="@android:color/holo_blue_light"
                android:textColorHint="@android:color/holo_blue_light"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/textview"
                android:textAllCaps="true"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="16sp"
                android:textStyle="bold" />


            <CheckBox
                android:id="@+id/addition1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="24dp"
                android:buttonTint="@color/colorAccent"
                android:text="@string/checkbox1"
                android:textColor="@android:color/holo_blue_light"
                android:textStyle="bold"/>
<!--                style="@style/TextVisuals"
-->


            <CheckBox
                android:id="@+id/addition2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="24dp"
                android:buttonTint="@color/colorAccent"
                android:text="@string/checkbox2"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/textview1"
                android:textAllCaps="true"
                android:textColor="@android:color/holo_blue_light"
                android:textColorHint="@android:color/holo_blue_light"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                android:orientation="horizontal"


                <Button
                    android:id="@+id/button3"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="16dp"
                    android:onClick="decrement"
                    android:text="@string/button3" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/textview2"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="16dp"
                    android:onClick="increment"
                    android:text="@string/button2" />


            </LinearLayout>

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="16dp"
                android:onClick="submitOrder"
                android:text="@string/button1"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/hint1"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/holo_blue_light"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/order_summary_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:textAllCaps="true"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="16sp"
                android:textStyle="bold" />

    <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="16dp"
                android:onClick="sendOrder"
                android:text="@string/button4"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ImageButton
                android:layout_width="wrap_content"
                android:onClick="showMap"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/btn_star"
                android:layout_alignParentRight="true"
                android:padding="10dp"/>

</RelativeLayout>


        </LinearLayout>

    </ScrollView>
</RelativeLayout>